Publish: Improved Laravel Mail Template

--- a/variant.html
+++ b/variant.html
@@ -126,41 +126,7 @@ table, td { color: #000000; } @media (max-width: 480px) { #u_content_heading_5 .
 <tbody>
 <tr>
 <td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Raleway',sans-serif;">
-<div class="menu" style="text-align:center;">
-<!--[if (mso)|(IE)]><table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" style=""><tr><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<a class="v-padding v-font-size" href="assets/asset_9fc44c42.bin" style="padding: 10px 20px; display: inline-block; color: rgb(255, 255, 255); font-family: Montserrat, sans-serif; font-size: 14px; text-decoration: none; line-height: inherit;" target="_self">Home
-    </a>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<span class="v-padding v-font-size hide-mobile" style="padding:10px 20px;display:inline-block;color:#ffffff;font-family:'Montserrat',sans-serif;font-size:14px;">
-      |
-    </span>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<a class="v-padding v-font-size" href="assets/asset_9fc44c42.bin" style="padding: 10px 20px; display: inline-block; color: rgb(255, 255, 255); font-family: Montserrat, sans-serif; font-size: 14px; text-decoration: none; line-height: inherit;" target="_self">Page
-    </a>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<span class="v-padding v-font-size hide-mobile" style="padding:10px 20px;display:inline-block;color:#ffffff;font-family:'Montserrat',sans-serif;font-size:14px;">
-      |
-    </span>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<a class="v-padding v-font-size" href="assets/asset_9fc44c42.bin" style="padding: 10px 20px; display: inline-block; color: rgb(255, 255, 255); font-family: Montserrat, sans-serif; font-size: 14px; text-decoration: none; line-height: inherit;" target="_self">About Us
-    </a>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<span class="v-padding v-font-size hide-mobile" style="padding:10px 20px;display:inline-block;color:#ffffff;font-family:'Montserrat',sans-serif;font-size:14px;">
-      |
-    </span>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]><td style="padding:10px 20px"><![endif]-->
-<a class="v-padding v-font-size" href="assets/asset_9fc44c42.bin" style="padding: 10px 20px; display: inline-block; color: rgb(255, 255, 255); font-family: Montserrat, sans-serif; font-size: 14px; text-decoration: none; line-height: inherit;" target="_self">Contact Us
-    </a>
-<!--[if (mso)|(IE)]></td><![endif]-->
-<!--[if (mso)|(IE)]></tr></table><![endif]-->
-</div>
+<div class="menu" style="text-align:center;">Home | Page | About Us | Contact Us</div>
 </td>
 </tr>
 </tbody>
@@ -191,11 +157,7 @@ table, td { color: #000000; } @media (max-width: 480px) { #u_content_heading_5 .
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_heading_1" role="presentation" style="font-family:'Raleway',sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:410px 290px 0px 10px;font-family:'Raleway',sans-serif;">
-<!--[if mso]><table width="100%"><tr><td><![endif]-->
-<h1 class="v-text-align v-font-size" style="margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Playfair Display',serif; font-size: 35px; font-weight: 400;"><span><span><span><span><span><span><span><span><span><span><span><span><strong>Gift List </strong></span></span></span></span></span></span></span></span></span></span></span></span></h1>
-<!--[if mso]></td></tr></table><![endif]-->
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:410px 290px 0px 10px;font-family:'Raleway',sans-serif;">Curated Gift Guide</td>
 </tr>
 </tbody>
 </table>
@@ -219,37 +181,21 @@ table, td { color: #000000; } @media (max-width: 480px) { #u_content_heading_5 .
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_text_1" role="presentation" style="font-family:'Raleway',sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 310px 61px 30px;font-family:'Raleway',sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="line-height: 140%; margin: 0px;">Welcome to our curated gift guide for tech enthusiasts! Our list features the latest products in the technology sector, making it an ideal resource for those seeking unique gifts.</p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 310px 61px 30px;font-family:'Raleway',sans-serif;">Delve into Our Exclusive Curated Gift Guide - Featuring Latest Tech Products for Unique Gifting Ideas!</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_text_2" role="presentation" style="font-family:'Raleway',sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:30px 50px 10px;font-family:'Raleway',sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; color: #bbbbbb; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="line-height: 140%; margin: 0px;">Welcome to our latest technology offerings! Discover exclusive discounts and stay updated on upcoming events.</p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:30px 50px 10px;font-family:'Raleway',sans-serif;">Experience the Latest in Tech Innovations - Exclusive Offers & Upcoming Event Updates Await!</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_button_1" role="presentation" style="font-family:'Raleway',sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 40px;font-family:'Raleway',sans-serif;">
-<!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-<div align="center" class="v-text-align">
-<!--[if mso]><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center" bgcolor="#57121b" style="padding:10px 20px;" valign="top"><![endif]-->
-<a class="v-button v-size-width v-font-size" href="assets/asset_2f8c5a96.bin" style="box-sizing: border-box; display: inline-block; text-decoration: none; text-size-adjust: none; text-align: center; color: rgb(255, 255, 255); background: rgb(87, 18, 27); border-radius: 4px; width: 30%; max-width: 100%; word-break: break-word; overflow-wrap: break-word; border-color: rgb(255, 255, 255); border-style: solid; border-width: 1px; font-size: 14px; line-height: inherit;" target="_blank"><span class="v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="line-height: 16.8px;">Shop Now</span></span>
-</a>
-<!--[if mso]></td></tr></table><![endif]-->
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 40px;font-family:'Raleway',sans-serif;">Explore Now</td>
 </tr>
 </tbody>
 </table>
@@ -343,7 +289,7 @@ table, td { color: #000000; } @media (max-width: 480px) { #u_content_heading_5 .
 <div class="v-text-align v-font-size" style="font-size: 14px; line-height: 170%; text-align: center; word-wrap: break-word;">
 <p style="font-size: 14px; line-height: 170%; margin: 0px;">UNSUBSCRIBE   |   PRIVACY POLICY   |   WEB</p>
 <p style="font-size: 14px; line-height: 170%; margin: 0px;"></p>
-<p style="font-size: 14px; line-height: 170%; margin: 0px;">Introducing our exclusive tech gift list for the upcoming holiday season. Discover the latest innovations and deals now!</p>
+<p style="font-size: 14px; line-height: 170%; margin: 0px;">Experience the latest tech innovations and deals with our exclusive holiday gift list.</p>
 </div>
 </td>
 </tr>
